[CDAP-8396][CDAP-8554] Created CTA for namespace creation - Added overflow and titles on long names - Fixed CTA modal not entirely overlapping with creation wizard

--- a/cdap-ui/app/cdap/components/EntityListView/EntityListInfo/EntityListInfo.scss
+++ b/cdap-ui/app/cdap/components/EntityListView/EntityListInfo/EntityListInfo.scss
@@ -23,6 +23,13 @@ $hovered-page-background-color: rgba(219, 219, 219, 1);
 
   .title {
     display: inline-block;
+    max-width: 85%;
+
+    h3 {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
 
   .pagination {
